# computation_geometry

./: Cargo.toml  README.md
cmake_template/: CMakeLists.txt
cmake_template/src/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
convex_hull/: Cargo.toml
convex_hull/src/: main.rs
src/: convex_hull.rs  intersection.rs  kd_tree.rs  line_state.rs  main.rs  math.rs  point_state.rs  states.rs  triangulation.rs
src/states/: line_state.rs  menu_state.rs  point_state.rs  search_tree_state.rs  triangulate_state.rs
